--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,29 +13,48 @@
   <header>
     <div class="container">
       <div class="row">
+        <div class="col-md-12">
 
-        <div class="col-md-4">
           <nav class="navbar navbar-nav navbar-left">
-           <span>Bookers</span>
+           <span class="bookers">Bookers</span>
           </nav>
-        </div>
-
-        <div class="col-md-4">
+        
           <nav>
             <ul class="navbar navbar-nav navbar-right">
               <% if user_signed_in? %>
 
-                <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  Home  </li>
-                <li><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  Users  </li>
-                <li><span class="glyphicon glyphicon-book" aria-hidden="true"></span>  Books  </li>
-                <li><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-                <%= link_to "logout", destroy_user_session_path, method: :delete %></li>
+                <li>
+                  <%= link_to user_path(current_user.id) do %><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  Home  <% end %>
+                </li>
+                <li>
+                  <%= link_to users_path do %><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  Users  <% end %>
+                </li>
+                <li>
+                  <%= link_to books_path do %><span class="glyphicon glyphicon-book" aria-hidden="true"> Books  </span>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_user_session_path, method: :delete do %><span class="glyphicon glyphicon-log-out" aria-hidden="true"> logout  </span>
+                </li>
+                  <% end %>
 
               <% else %>
-               <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  Home  </li>
-                <li><span class="glyphicon glyphicon-link" aria-hidden="true"></span>  About  </li>
-                <li><span class="glyphicon glyphicon-edit" aria-hidden="true"></span><%= link_to "  Sign up",new_user_registration_path %>  </li>
-                <li><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span><%= link_to "  login", new_user_session_path %></li>
+               <li>
+                <%= link_to root_path do %><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  Home  
+                <% end %>
+               </li>
+
+                <li>
+                  <span class="glyphicon glyphicon-link" aria-hidden="true"></span>  About  </li>
+                <li>
+                  <%= link_to new_user_registration_path do %><span class="glyphicon glyphicon-edit" aria-hidden="true">  Sign up  </span>
+                  <% end %>
+                </li>
+
+                <li>
+                  <%= link_to new_user_session_path do %><span class="glyphicon glyphicon-log-out" aria-hidden="true">   login</span>
+                  <% end %>
+                </li>
               <% end %>
 
             </ul>
@@ -43,16 +62,15 @@
         </div>
       </div>
     </div>
-   </div>
+      
 
   </header>
 
-  <body>
+  </body>
     <% if flash[:notice] %>
       <div class="flash">
         <% flash[:notice] %></div>
     <% end %>
-   
 
     <%= yield %>
   </body>
