--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,26 +1,87 @@
 <body>
-<h1>index</h1>
 
-<h1>Books</h1>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+				<h2>User info</h2>
+				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img" %>
 
-	<table>
-	 <thead>
-	  <tr>
-		<th>Title</th>
-		<th>Body</th>
-		<th colspan="3"></th>
-	  </tr>
-	</thead>
+						<table class="table">
+							<tbody>
+								<tr>
+									<th>name</th>
+									<th><%= @user.name %></th>
+								</tr>
+								<tr>
+									<th>introduction</th>
+									<th><%= @user.introduction %></th>
+								</tr>
+							</tbody>
+						</table>
 
-	<tbody>
-	 <% @books.each do |book| %>
-	 <tr>
-		<td><%= book.title %></td>
-		<td><%= book.body %></td>
-	 </tr>
-	</tbody>
-	 <% end %>
-	
+				<div class="row">
+				 <% if @user.id == current_user.id %>
 
-	</table>
+				 <%= link_to edit_user_path(@user) do %>
+				  <span class="col-md-12 btn btn-default glyphicon glyphicon-wrench" aria-hidden="true"></span>
+				 <% end %>
+
+				 <% end %>
+				</div>
+
+				<h2>New book</h2>
+				 <%= form_for(@book) do |f| %>
+				  <div class="field-row">
+	 			  	<label for="book_title">Title</label>
+	 			  	 <div class="col-md-12">
+	 				  <%= f.text_field :title %>
+	 				 </div>
+				  </div>
+
+				  <div class="field-row">
+	 				<label for="book_body">Opinion</label>
+	 				 <div class="col-md-12">
+	 				  <%= f.text_area :body %>
+	 				 </div>
+	 			  </div>
+				 
+
+				  <div class="action-row">
+				  	<div class="col-md-12">
+  	 				 <button type="submit" class="btn btn-primary">Create Book</button>
+  	 				</div>
+  				  </div>
+				 <% end %>
+
+			</div>
+
+		<div class="col-md-9">
+
+			<h2>Books</h2>
+				<table>
+	 				<thead>
+	  					<tr>
+	  					 <th></th>
+						 <th>Title</th>
+						 <th>Body</th>
+						 <th colspan="3"></th>
+	  					</tr>
+					</thead>
+
+					<tbody>
+	 				 <%if @books.present? %>
+	 				 <% @books.each do |book| %>
+	  					<tr>
+	  					 <td></td>
+						 <td><%= book.title %></td>
+			    		 <td><%= book.body %></td>
+	  					</tr>
+				
+	 				 <% end %>
+					 <% end %>
+					</tbody>
+				</table>
+		</div>
+	  </div>
+	</div>
 </body>
