--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,9 @@
 	<div class="row">
 		<div class="col-md-3">
 			<h2>User info</h2>
-			<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image_jpg" %>
+			<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img" %>
+
+
 
 				<table class="table">
 				 <tbody>
@@ -55,35 +57,27 @@
 
 
 		</div>
-		
 		<div class="col-md-9">
-			<h2>Books</h2>
-			<table>
-			  <thead>
-			  	<tr>
-					<th>Title</th>
-					<th>Opinion</th>
-					<th colspan="3"></th>
-				</tr>
-			  </thead>
+			<h2>Users</h2>
+			<div class="table">
+				<thead>
+				 <tr>
+				 	<th>Image</th>
+				 	<th>name</th>
+				 	<th colspan="3"></th>
+				 </tr>
+				</thead>
 
-			  <tbody>
-			  	<%if @books.present? %>
-	            <% @books.each do |book| %>
-			  	<tr>
-			  	  <td><%= book.title %></td>
-			  	  <td><%= book.body %></td>
+				<tbody>
+				 <% @users.each do |user| %>
 
-			  	</tr>
-			  </tbody>
-			  	<% end %>
-			  	<% end %>
-			    
-
-			</table>
+			  	  <tr>
+			  	  	<td></td>
+			  	 	<td><%= @user.name %></td>
+				  	<td><%= link_to 'Show', user_path(user) %></td>
+				  </tr>
+				 </tbody>
+				 <% end %>
+			</div>
 		</div>
-
 	</div>
-  </div>
-
-</body>
