--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,33 +1,40 @@
 <body>
 	<div class="container">
 	  <div class="row">
-		<div class="col-md-6 col-offset-3">
+		<div class="col-xs-6 col-xs-offset-3">
 
-		  <h2>Editing Book</h2>
+		  <h1>Editing Book</h1>
 
 			<%= form_for(@book) do |f| %>
 			  <div class="field-row">
-			  	<div class="col-md-12">
+			  	<div class="col-xs-12 ">
 				 <label for="book_title">Title</label>
 				 <%= f.text_field :title %>
 				</div>
 			  </div>
+			 
 
 			  <div class="field-row">
-			   <div class="col-md-12">
-				<label for="book_body">Body</label>
+			   <div class="col-xs-12 ">
+				<label for="book_body">Opinion</label>
 				<%= f.text_area :body %>
 
-			  </div>
+			   </div>
+			 </div>
 
 			  <div class="action">
-				<%= f.submit 'Update Book' %></div>
+			  	<button class="bt btn-primary btn-block" type="submit">Update Book</button>
 
 				<%= link_to 'Show', @book %>
 				|
 				<%= link_to 'Back', books_path %>
+			 </div>
 
 			<% end %>
+
+			<div class="col-xs-3"></div>
+		</div>
+
 		</div>
 	  </div>
 	</div>
