--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,14 @@
 <body>
 
 	<div class="container">
+		<% if flash[:notice] %>
+			<p id="notice"><%= flash[:notice] %></p>
+		<% end %>
+		
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-xs-3">
 				<h2>User info</h2>
-				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img" %>
+				<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
 
 						<table class="table">
 							<tbody>
@@ -23,58 +27,70 @@
 				 <% if @user.id == current_user.id %>
 
 				 <%= link_to edit_user_path(@user) do %>
-				  <span class="col-md-12 btn btn-default glyphicon glyphicon-wrench" aria-hidden="true"></span>
+				  <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench" aria-hidden="true"></span>
 				 <% end %>
 
 				 <% end %>
 				</div>
 
-			<h2>New book</h2>
-				<%= form_for(@new_book) do |f| %>
-				  <div class="field-row">
-	 			  	<label for="book_title">Title</label>
-	 			  	 <div class="col-md-12">
-	 				  <%= f.text_field :title %>
-	 				 </div>
-				  </div>
+				<h2>New book</h2>
+					<%= form_for(@new_book) do |f| %>
+				  		<div class="field-row">
+				  			<div class="col-xs-12">
+	 			  				<label for="book_title">Title</label>
+	 				  			<%= f.text_field :title %>
+	 				 		</div>
+				  		</div>
 
-				  <div class="field-row">
-	 				<label for="book_body">Opinion</label>
-	 				 <div class="col-md-12">
-	 				  <%= f.text_field :body %>
-	 				 </div>
-	 			  </div>
+				 		 <div class="field-row">
+				 		 	<div class="col-xs-12">
+	 							<label for="book_body">Opinion</label>
+	 				 			 <%= f.text_area :body %>
+	 				 		</div>
+	 			  		</div>
 				 
 
-				  <div class="action-row">
-				  	<div class="col-md-12">
-  	 				 <button type="submit" class="btn btn-primary">Create Book</button>
-  	 				</div>
-  				  </div>
-				<% end %>
+				 		 <div class="action-row">
+				  			<div class="col-xs-12">
+  	 				 			<button class="btn btn-primary btn-block" type="submit" >Create Book</button>
+  	 						</div>
+  				  		</div>
+					<% end %>
 
-		</div>
+			</div>
 
-		<div class="col-md-9">
-			<h2>Book detail</h2>
+			<div class="col-xs-9">
+				<h2>Book detail</h2>
 
-			<div class="table">
-				<tbody>
-			  	 <tr>
-			  	 	<td></td>
-      			  	<td><%= @book.title %></td>
-				  	<td><%= @book.body %></td>
-				  	<td><%= link_to 'Edit', edit_book_path(@book) %></td>
-				  	<td><%= link_to 'destroy', @book, method: :delete, "data-confirm" => "本当に消しますか？" %></td>
+					<table class="table">
+						<tbody>
+			  	 			<tr>
+			  	 				<td>
+			  	 				<%= link_to user_path(@user.id) do %>
+			  	 					<%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg", size: '40x40' %><br><%= @user.name %>
+			  	 				<% end %>
+			  	 				</td>
 
-				  	<a href="edit_book_path(@book)" class="btn btn-success btn-sm">Edit</a>
+      			  				<td><%=link_to @book.title, book_path(@book.id) %></td>
+				  				<td><%= @book.body %></td>
+				  				<td><% if @book.user == current_user %>
+				  		　			<%= link_to edit_book_path(@book) do %><button class="btn btn-success btn-sm">Edit</button>
+				  		  			<% end %>
+				  		 			<% end %>
+				  				</td>
+				  				<td>
+				  					<% if @book.user == current_user %>
+				  		　			<%= link_to @book, method: :delete, "data-confirm" => "本当に消しますか?" do %>
+				  		    			<button class="btn btn-danger btn-sm">Destroy</button>
+				  		  			<% end %>
+				  					<% end %>
+				  				</td>
 
-				  	<a class="btn btn-danger btn-sm">Destroy</a>
+				 			</tr>
+			  			</tbody>
+					 </table>
 
-				 </tr>
-			  </tbody>
-			 </table>
-
+			</div>
 		</div>
 	</div>
-</div>
+</body>
