--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,31 +1,31 @@
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-offset-3 col-md-6">
-				<h1>welcome to
-					<span class="glyphicon glyphicon-book">
-					 <strong>Bookers</strong></span>  !!
-				</h1>
+	<div class="body">
+		<div class="container">
+			<% if flash[:notice] %>
+			<p id="notice"><%= flash[:notice] %></p>
+			<% end %>
 
-				<p>In  <span class="glyphicon glyphicon-book"></span>
-					<strong>Bookers</strong>,</p>
-				<p>you can share and exchange your opinions , inpressions , and emotions</p>
-				<p>about various books!</p>
-			</div>
+			　<div class="row">
+				<div class="top-message col-md-offset-3 col-md-6">
+					<h1>welcome to
+						<span class="glyphicon glyphicon-book"><strong>Bookers</strong></span>  !!
+					</h1>
+
+					<p>In  <span class="glyphicon glyphicon-book"></span>
+						<strong>Bookers</strong>,</p>
+					<p>you can share and exchange your opinions , inpressions , and emotions</p>
+					<p>about various books!</p>
+				
+					<div class="btn-wrapper">
+					  <div class="row">
+						<p><a class="btn btn-info col-md-10 col-md-offset-1 log_in" href="users/sign_in">Log in</a></p>
+					  </div>
+					  <div class="row">
+						<p><a class="btn btn-success col-md-10 col-md-offset-1 sign_up" href="users/sign_up">Sign up</a></p>
+					  </div>
+					</div>
+				</div>
+			　</div>
 		</div>
-
-		<div class="btn">
-			<div class="row">
-				<a class="btn btn-info btn-block col-md-offset-1 col-md-10" href="users/sign_in">Log in</a>
-				<a class="btn btn-success col-md-offset-1 col-md-10" href="users/sign_up">Sign up</a>
-			</div>
-		</div>
-
-
-
-
-
 	</div>
-	
-
 </body>
