--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <header>
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
 
           <nav class="navbar navbar-nav navbar-left">
            <span class="bookers">Bookers</span>
@@ -35,19 +35,21 @@
                 </li>
                 <li>
                   <%= link_to destroy_user_session_path, method: :delete do %><span class="glyphicon glyphicon-log-out" aria-hidden="true"> logout  </span>
-                </li>
                   <% end %>
+                </li>
 
               <% else %>
                <li>
-                <%= link_to root_path do %><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  Home  
+                <%= link_to root_path do %><span class="glyphicon glyphicon-home" aria-hidden="true">  Home  </span>
                 <% end %>
                </li>
 
                 <li>
-                  <span class="glyphicon glyphicon-link" aria-hidden="true"></span>  About  </li>
+                  <%= link_to home_about_path do %><span class="glyphicon glyphicon-link" aria-hidden="true">  About  </span>
+                  <% end %>
+                </li>
                 <li>
-                  <%= link_to new_user_registration_path do %><span class="glyphicon glyphicon-edit" aria-hidden="true">  Sign up  </span>
+                  <%= link_to new_user_registration_path do %><span class="glyphicon glyphicon-edit" aria-hidden="true">  sign up  </span>
                   <% end %>
                 </li>
 
@@ -63,19 +65,25 @@
       </div>
     </div>
       
-
   </header>
 
-  </body>
+  <body>
     <% if flash[:notice] %>
       <div class="flash">
-        <% flash[:notice] %></div>
+        <% flash[:notice] %>
+      </div>
     <% end %>
 
     <%= yield %>
   </body>
 
   <footer>
-    CopyRight Infratop.Inc
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-3 col-xs-offset-9">
+          <p>CopyRight Infratop.Inc</p>
+        </div>
+      </div>
+    </div>
   </footer>
 </html>
