--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,14 @@
 <body>
 
-<div class="container">
-	<div class="row">
-		<div class="col-md-3">
-			<h2>User info</h2>
-			<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image_jpg" %>
+	<div class="container">
+		<% if flash[:notice] %>
+		<p id="notice"><%= flash[:notice] %></p>
+		<% end %>
+
+	  	<div class="row">
+			<div class="col-xs-3">
+				<h2>User info</h2>
+				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
 
 				<table class="table">
 				 <tbody>
@@ -23,44 +27,43 @@
 				 <% if @user.id == current_user.id %>
 
 				 <%= link_to edit_user_path(@user) do %>
-				  <span class="col-md-12 btn btn-default glyphicon glyphicon-wrench" aria-hidden="true"></span>
+				  <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench" aria-hidden="true"></span>
 				 <% end %>
 
 				 <% end %>
 				</div>
 
 
-			<h2>New book</h2>
-				<%= form_for(@book) do |f| %>
-				  <div class="field-row">
-	 			  	<label for="book_title">Title</label>
-	 			  	 <div class="col-md-12">
-	 				  <%= f.text_field :title %>
-	 				 </div>
-				  </div>
+				<h2>New book</h2>
+					<%= form_for(@book) do |f| %>
+				  		<div class="field-row">
+				  			<div class="col-xs-12">
+	 			  				<label for="book_title">Title</label>
+	 				 	 		<%= f.text_field :title %>
+	 				 		</div>
+				  		</div>
 
-				  <div class="field-row">
-	 				<label for="book_body">Opinion</label>
-	 				 <div class="col-md-12">
-	 				  <%= f.text_area :body %>
-	 				 </div>
-				  </div>
+				  		<div class="field-row">
+				  			<div class="col-xs-12">
+	 							<label for="book_body">Opinion</label>
+	 				  			<%= f.text_area :body %>
+	 				 		</div>
+				  		</div>
 
-				  <div class="action-row">
-				  	<div class="col-md-12">
-				  	 <button type="submit" class="btn btn-primary">Create Book</button>
-				  	</div>
-  				  </div>
-				<% end %>
-
-
-		</div>
+				 		<div class="action-row">
+				  			<div class="col-xs-12">
+				  	 			<button class="btn btn-primary btn-block" type="submit" >Create Book</button>
+				  			</div>
+  				  		</div>
+					<% end %>
+			</div>
 		
-		<div class="col-md-9">
+		<div class="col-xs-9">
 			<h2>Books</h2>
-			<table>
+			<table class="table">
 			  <thead>
 			  	<tr>
+			  		<th></th>
 					<th>Title</th>
 					<th>Opinion</th>
 					<th colspan="3"></th>
@@ -68,15 +71,13 @@
 			  </thead>
 
 			  <tbody>
-			  	<%if @books.present? %>
 	            <% @books.each do |book| %>
 			  	<tr>
-			  	  <td><%= book.title %></td>
+			  	  <td><%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg", size: '40x40' %></td>
+			  	  <td><%=link_to book.title, book_path(book.id) %></td>
 			  	  <td><%= book.body %></td>
-
 			  	</tr>
 			  </tbody>
-			  	<% end %>
 			  	<% end %>
 			    
 
