--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
 		<% if flash[:notice] %>
 			<p id="notice"><%= flash[:notice] %></p>
 		<% end %>
-		
+
 		<div class="row">
 			<div class="col-xs-3">
 				<h2>User info</h2>
@@ -52,7 +52,7 @@
 
 				 		 <div class="action-row">
 				  			<div class="col-xs-12">
-  	 				 			<button class="btn btn-primary btn-block" type="submit" >Create Book</button>
+  	 				 			<button class="btn btn primary" type="submit">Create Book</button>
   	 						</div>
   				  		</div>
 					<% end %>
