--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,14 @@
 <body>
 	<div class="container">
 	  <div class="row">
-		<div class="col-xs-6 col-xs-offset-3">
+		<div class="col-md-6 col-md-offset-3">
 
 		  <h1>Editing Book</h1>
 
 			<%= form_for(@book) do |f| %>
 			  <div class="field-row">
 			  	<div class="col-xs-12 ">
-				 <label for="book_title">Title</label>
+				 <%= f.label :Title %><br>
 				 <%= f.text_field :title %>
 				</div>
 			  </div>
@@ -16,14 +16,14 @@
 
 			  <div class="field-row">
 			   <div class="col-xs-12 ">
-				<label for="book_body">Opinion</label>
+				<%= f.label :Opinion %><br>
 				<%= f.text_area :body %>
 
 			   </div>
 			 </div>
 
 			  <div class="action">
-			  	<button class="bt btn-primary btn-block" type="submit">Update Book</button>
+			  	<button class="btn btn-primary col-xs-12" type="submit">Update Book</button>
 
 				<%= link_to 'Show', @book %>
 				|
@@ -32,8 +32,7 @@
 
 			<% end %>
 
-			<div class="col-xs-3"></div>
-		</div>
+			<div class="col-md-3"></div>
 
 		</div>
 	  </div>
