--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,12 @@
 <body>
+	<div class="body">
+		<div class="container">
 
-	<h1>Welcome to
-		<span class="glyphicon glyphicon-book">
-	 	<strong>Bookers</strong></span>  !!
-	</h1>
+			<h1>Welcome to
+				<span class="glyphicon glyphicon-book">
+	 				</span><strong>Bookers</strong>!!
+			</h1>
+		</div>
+	</div>
 
 </body>
