--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,9 @@
   </head>
 
   <body>
-  <header>
+  <header class="navbar navbar-fixed-top navbar-inverse">
+
     <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
 
           <nav class="navbar navbar-nav navbar-left">
            <span class="bookers">Bookers</span>
@@ -23,37 +22,38 @@
             <ul class="navbar navbar-nav navbar-right">
               <% if user_signed_in? %>
 
-                <li>
+                <li class="icon">
                   <%= link_to user_path(current_user.id) do %><span class="glyphicon glyphicon-home" aria-hidden="true"></span>  Home  <% end %>
                 </li>
-                <li>
+                <li class="icon">
                   <%= link_to users_path do %><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  Users  <% end %>
-                </li>
-                <li>
+                </li class="icon">
+                <li class="icon">
                   <%= link_to books_path do %><span class="glyphicon glyphicon-book" aria-hidden="true"> Books  </span>
                   <% end %>
                 </li>
-                <li>
+                <li class="icon">
                   <%= link_to destroy_user_session_path, method: :delete do %><span class="glyphicon glyphicon-log-out" aria-hidden="true"> logout  </span>
                   <% end %>
-                </li>
+                </li class="icon">
 
               <% else %>
-               <li>
+               <li class="icon">
                 <%= link_to root_path do %><span class="glyphicon glyphicon-home" aria-hidden="true">  Home  </span>
                 <% end %>
                </li>
 
-                <li>
+                <li class="icon">
                   <%= link_to home_about_path do %><span class="glyphicon glyphicon-link" aria-hidden="true">  About  </span>
                   <% end %>
                 </li>
-                <li>
+
+                <li class="icon">
                   <%= link_to new_user_registration_path do %><span class="glyphicon glyphicon-edit" aria-hidden="true">  sign up  </span>
                   <% end %>
                 </li>
 
-                <li>
+                <li class="icon">
                   <%= link_to new_user_session_path do %><span class="glyphicon glyphicon-log-out" aria-hidden="true">   login</span>
                   <% end %>
                 </li>
@@ -61,8 +61,6 @@
 
             </ul>
           </nav>
-        </div>
-      </div>
     </div>
       
   </header>
@@ -86,4 +84,5 @@
       </div>
     </div>
   </footer>
+
 </html>
