--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,10 @@ header {
 	color: red;
 }
 
+#notice {
+	color: green;
+}
+
 
 body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
