--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,6 +5,8 @@
 
 		  <h1>Editing Book</h1>
 
+		  <%= render "layouts/error_messages" %>
+
 			<%= form_for(@book) do |f| %>
 			  <div class="field-row">
 			  	<div class="col-xs-12 ">
