--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -75,7 +75,10 @@
 	 				 <%if @books.present? %>
 	 				 <% @books.each do |book| %>
 	  					<tr>
-	  					 <td><%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg", size: '40x40' %></td>
+	  					 <td><%= link_to user_path(book.user) do %>
+	  					 	 <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg", size: '40x40' %>
+	  					 	<% end %>
+
 						 <td>
 						 	<%= link_to book.title, book_path(book.id) %>
 						 </td>
