--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -18,10 +18,12 @@
 				
 					<div class="btn-wrapper">
 					  <div class="row">
-						<p><a class="btn btn-info col-md-10 col-md-offset-1 log_in" href="users/sign_in">Log in</a></p>
+					  	<p><a class="btn btn-info col-md-10 col-md-offset-1 log_in" href="/users/sign_in">Log in</a></p>
+					  
 					  </div>
 					  <div class="row">
-						<p><a class="btn btn-success col-md-10 col-md-offset-1 sign_up" href="users/sign_up">Sign up</a></p>
+						<p><a class="btn btn-success col-md-10 col-md-offset-1 sign_up" href="/users/sign_up">Sign up</a></p>
+					  
 					  </div>
 					</div>
 				</div>
