--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <body>
-
+  <div class="body">
 	<div class="container">
 
 			<p id="notice"><%= flash[:notice] %></p>
@@ -51,7 +51,7 @@
 
 				 		 <div class="action-row">
 				  			<div class="col-xs-12">
-  	 				 			<button class="btn btn primary" type="submit">Create Book</button>
+  	 				 			<button class="btn btn-primary btn-block" type="submit" >Create Book</button>
   	 						</div>
   				  		</div>
 					<% end %>
@@ -92,4 +92,6 @@
 			</div>
 		</div>
 	</div>
+  </div>
+
 </body>
