--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,6 @@
 <body>
-	<div class="container">
+	<div class="body">
+	 <div class="container">
 	  <div class="row">
 		<div class="col-md-6 col-md-offset-3">
 
@@ -39,5 +40,6 @@
 		</div>
 	  </div>
 	</div>
+  </div>
 
 </body>
