--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <body>
-
+  <div class="body">
 	<div class="container">
 
 		 <%= render "layouts/error_messages" %>
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col-xs-3">
 				<h2>User info</h2>
-				<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
+				<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
 
 						<table class="table">
 							<tbody>
@@ -77,7 +77,7 @@
 	  					<tr>
 	  					 <td><%= link_to user_path(book.user) do %>
 	  					 	 <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg", size: '40x40' %>
-	  					 	<% end %>
+	  					 	<% end %></td>
 
 						 <td>
 						 	<%= link_to book.title, book_path(book.id) %>
@@ -92,4 +92,5 @@
 		</div>
 	  </div>
 	</div>
+  </div>
 </body>
