--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,83 +1,87 @@
 <body>
+  <div class="body">
 
-<div class="container">
-	<div class="row">
-		<div class="col-xs-3">
-			<h2>User info</h2>
-			<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-3">
+				<h2>User info</h2>
+					<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
 
 
 
+					<table class="table">
+				 		<tbody>
+							<tr>
+								<th>name</th>
+								<th><%= @user.name %></th>
+							</tr>
+							<tr>
+								<th>introduction</th>
+								<th><%= @user.introduction %></th>
+							</tr>
+						</tbody>
+					</table>
+
+					<div class="row">
+						 <% if @user.id == current_user.id %>
+
+							<%= link_to edit_user_path(@user) do %>
+				 			 <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench" aria-hidden="true"></span>
+				 			<% end %>
+
+						 <% end %>
+					</div>
+
+
+					<h2>New book</h2>
+						<%= form_for(@book) do |f| %>
+				 		 <div class="field-row">
+				  			<div class="col-xs-12">
+	 			  				<label for="book_title">Title</label>
+	 				  			<%= f.text_field :title %>
+	 				 		</div>
+				  		</div>
+
+				  		<div class="field-row">
+				  			<div class="col-xs-12">
+	 							<label for="book_body">Opinion</label>
+	 				  			<%= f.text_area :body %>
+	 				 		</div>
+				  		</div>
+
+				  		<div class="action-row">
+				  			<div class="col-xs-12">
+				  	 			<button class="btn btn-primary btn-block" type="submit" >Create Book</button>
+				  			</div>
+  				  		</div>
+						<% end %>
+
+
+			</div>
+			<div class="col-xs-9">
+				<h2>Users</h2>
 				<table class="table">
-				 <tbody>
+					<thead>
 						<tr>
-							<th>name</th>
-							<th><%= @user.name %></th>
-						</tr>
-						<tr>
-							<th>introduction</th>
-							<th><%= @user.introduction %></th>
-						</tr>
-					</tbody>
+				 			<th>Image</th>
+				 			<th>name</th>
+				 			<th colspan="3"></th>
+				 		</tr>
+					</thead>
+
+					<tbody>
+						<% @users.each do |user| %>
+			  	  			<tr>
+			  	  				<td><%= attachment_image_tag user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg", size:'40x40' %></td>
+			  	 				<td><%= user.name %></td>
+				  				<td><%= link_to 'Show', user_path(user) %></td>
+				  			</tr>
+				 	</tbody>
+						<% end %>
 				</table>
-
-				<div class="row">
-				 <% if @user.id == current_user.id %>
-
-				 <%= link_to edit_user_path(@user) do %>
-				  <span class="col-xs-12 btn btn-default glyphicon glyphicon-wrench" aria-hidden="true"></span>
-				 <% end %>
-
-				 <% end %>
-				</div>
-
-
-			<h2>New book</h2>
-				<%= form_for(@book) do |f| %>
-				  <div class="field-row">
-				  	<div class="col-xs-12">
-	 			  		<label for="book_title">Title</label>
-	 				  	<%= f.text_field :title %>
-	 				 </div>
-				  </div>
-
-				  <div class="field-row">
-				  	<div class="col-xs-12">
-	 					<label for="book_body">Opinion</label>
-	 				  	<%= f.text_area :body %>
-	 				 </div>
-				  </div>
-
-				  <div class="action-row">
-				  	<div class="col-xs-12">
-				  	 <button class="btn btn-primary btn-block" type="submit" >Create Book</button>
-				  	</div>
-  				  </div>
-				<% end %>
-
-
-		</div>
-		<div class="col-xs-9">
-			<h2>Users</h2>
-			<table class="table">
-				<thead>
-				 <tr>
-				 	<th>Image</th>
-				 	<th>name</th>
-				 	<th colspan="3"></th>
-				 </tr>
-				</thead>
-
-				<tbody>
-				 <% @users.each do |user| %>
-
-			  	  <tr>
-			  	  	<td><%= attachment_image_tag user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg", size:'40x40' %>
-			  	 	<td><%= user.name %></td>
-				  	<td><%= link_to 'Show', user_path(user) %></td>
-				  </tr>
-				 </tbody>
-				 <% end %>
-			</table>
+			</div>
+			</div>
 		</div>
 	</div>
+</body>
+
