--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,6 +7,7 @@
 		<div class="row">
 			<div class="col-xs-3">
 				<h2>User info</h2>
+				<h2>user</h2>
 				<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', class: "pull-left profile-img", fallback: "no_image.jpg" %>
 
 						<table class="table">
